--- a/Documentation/P53_DMS_Documentation.ipynb
+++ b/Documentation/P53_DMS_Documentation.ipynb
@@ -11,26 +11,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:18.098059Z",
+     "start_time": "2023-07-17T18:06:17.872509Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:55:30.768200Z",
-     "end_time": "2023-07-17T17:55:30.849352Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-17T17:55:30.849651Z",
-     "end_time": "2023-07-17T17:55:32.806562Z"
+     "end_time": "2023-07-17T18:06:18.379624Z",
+     "start_time": "2023-07-17T18:06:18.339834Z"
     }
    },
    "outputs": [],
@@ -52,8 +51,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-17T17:55:32.807105Z",
-     "end_time": "2023-07-17T17:55:32.906101Z"
+     "end_time": "2023-07-17T18:06:19.821658Z",
+     "start_time": "2023-07-17T18:06:19.679586Z"
     }
    },
    "outputs": [],
@@ -80,8 +79,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-17T17:55:32.906229Z",
-     "end_time": "2023-07-17T17:55:34.455048Z"
+     "end_time": "2023-07-17T18:06:22.022454Z",
+     "start_time": "2023-07-17T18:06:21.013117Z"
     }
    },
    "outputs": [],
@@ -95,8 +94,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-17T17:55:34.453397Z",
-     "end_time": "2023-07-17T17:55:35.168728Z"
+     "end_time": "2023-07-17T18:06:24.387086Z",
+     "start_time": "2023-07-17T18:06:23.858002Z"
     }
    },
    "outputs": [],
@@ -110,8 +109,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-17T17:55:34.969164Z",
-     "end_time": "2023-07-17T17:55:35.195886Z"
+     "end_time": "2023-07-17T18:06:24.794313Z",
+     "start_time": "2023-07-17T18:06:24.746513Z"
     }
    },
    "outputs": [],
@@ -125,8 +124,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-17T17:55:35.015101Z",
-     "end_time": "2023-07-17T17:55:35.196273Z"
+     "end_time": "2023-07-17T18:06:25.497833Z",
+     "start_time": "2023-07-17T18:06:25.459053Z"
     }
    },
    "outputs": [],
@@ -140,8 +139,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-17T17:56:49.840350Z",
-     "end_time": "2023-07-17T17:56:50.566424Z"
+     "end_time": "2023-07-17T18:06:26.525758Z",
+     "start_time": "2023-07-17T18:06:25.945687Z"
     }
    },
    "outputs": [],
@@ -153,65 +152,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:27.528939Z",
+     "start_time": "2023-07-17T18:06:27.487310Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# The 5 position with the lowest mean DMS_scores in the \"Giacomelli null etoposide\" dataset\n",
     "doc.GNELV"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:56:50.563626Z",
-     "end_time": "2023-07-17T17:56:50.579975Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:28.054967Z",
+     "start_time": "2023-07-17T18:06:28.019268Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# The 5 position with the highest mean DMS_scores in the \"Giacomelli null etoposide\" dataset\n",
     "doc.GNEHV"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:56:51.043549Z",
-     "end_time": "2023-07-17T17:56:51.141066Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:28.565218Z",
+     "start_time": "2023-07-17T18:06:28.524942Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# The positions (-> most affected by mutation) are the following throughout each Dataset:\n",
     "doc.lowest_vals.head(20)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:56:54.232844Z",
-     "end_time": "2023-07-17T17:56:54.300228Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:29.531416Z",
+     "start_time": "2023-07-17T18:06:29.205622Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#As a final and conclusive way to show the differences of the datasets we chose to visualize our datasets as linegraphs in one plot, this plot shows the mean DMS scores for each position and lets us quickly seek out positions that are greatly affected by mutation and those that are not. By summing up all DMS scores and dividing this sum by the number of values summed we can also create a rough comparability to the Kotler dataset which is also visible in this graph:\n",
     "vis.linegraph(dataframes=[doc.gia_null_eto_z_mmn_df_mean, doc.gia_null_nut_z_mmn_df_mean, doc.gia_wt_nut_z_mmn_df_mean, doc.kot_hum_z_mmn_df_mean])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,8 +222,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-17T17:56:56.984730Z",
-     "end_time": "2023-07-17T17:56:57.588654Z"
+     "end_time": "2023-07-17T18:06:30.915355Z",
+     "start_time": "2023-07-17T18:06:30.349548Z"
     }
    },
    "outputs": [],
@@ -251,23 +247,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:31.892060Z",
+     "start_time": "2023-07-17T18:06:31.798130Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# calculate feature matrices\n",
     "feature_matrix_aa = dc.clean_aa(aa)\n",
     "feature_matrix_p53 = dc.rmv_na(dc.df_transform(norm_frame))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:56:58.121798Z",
-     "end_time": "2023-07-17T17:56:58.202226Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:32.981612Z",
+     "start_time": "2023-07-17T18:06:32.927284Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# calculate distance matrices as well as mean substitution matrices\n",
@@ -278,18 +279,17 @@
     "\n",
     "mean_subs_wt_p53 = dc.rmv_na(de.mean_substitutions(norm_frame))\n",
     "mean_subs_mut_p53 = dc.rmv_na(de.mean_substitutions(norm_frame).T)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:56:59.976885Z",
-     "end_time": "2023-07-17T17:57:00.041587Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:34.238158Z",
+     "start_time": "2023-07-17T18:06:33.552982Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# hierarchical ward clustering\n",
@@ -300,18 +300,17 @@
     "print(\"---------------------------------\")\n",
     "de.plot_hier_clust(mean_subs_wt_p53, title = \"p53 mean substitutions for WT AAs\")\n",
     "de.plot_hier_clust(mean_subs_mut_p53, title = \"p53 mean substitutions for mutated AAs\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:57:00.519694Z",
-     "end_time": "2023-07-17T17:57:01.223293Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:35.146255Z",
+     "start_time": "2023-07-17T18:06:34.997290Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# determine optimal amount of clusters\n",
@@ -323,18 +322,17 @@
     "print (clusters_by_sil_chem)\n",
     "print (\"---\")\n",
     "print (clusters_by_sil_p53)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:57:01.220123Z",
-     "end_time": "2023-07-17T17:57:01.302783Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:36.494897Z",
+     "start_time": "2023-07-17T18:06:35.737106Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Plotting, after pca and hierarchical clustering. clusters are defined by the colors shown in the legend.\n",
@@ -348,17 +346,11 @@
     "\n",
     "#------------------------------------------------------------------\n",
     "# I HAVE NO IDEA WHY THESE PLOTS LOOK SO AWFUL IN THIS NOTEBOOK. For better plots look at the de.clustering_pca_plotting.ipynb file"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:57:02.622869Z",
-     "end_time": "2023-07-17T17:57:03.487257Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "##### *Outlook and additional information for Data Exploration*\n",
     "\n",
@@ -367,56 +359,60 @@
     "TO SEE THE PLOTS WITH K-MEANS: To quantify the effects of the clustering method used (here: hierarchical clustering), we also performed clustering with kmeans to compare the results in the report. Take a look at the de.pca_kmeans_plotting.ipynb file\n",
     "\n",
     "TO PROOF OUR CODE RUNS ON ALL DATASETS: We ran our code on the Stiffler Dataset on E. coli ß-Lactamase. To see the plots, take a look at the pca_hierarchical_plotting_ßlactamase.ipynb file"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Calculating severity scores\n",
     "#### Matching DMS_scores with the mutation probability (only for single mutations)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:38.022795Z",
+     "start_time": "2023-07-17T18:06:37.803659Z"
+    }
+   },
    "outputs": [],
    "source": [
     "p53_codons = ses.p53_codons_gia\n",
     "smu_dms = ses.dms_smut(p53_codons, gia_null_eto, bias_dms=False)\n",
     "smu_dms.head(15)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:38.902116Z",
+     "start_time": "2023-07-17T18:06:38.724131Z"
+    }
+   },
    "outputs": [],
    "source": [
     "sns.heatmap(smu_dms, cmap='seismic', )"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:06:39.781144Z",
+     "start_time": "2023-07-17T18:06:39.475385Z"
+    }
+   },
    "outputs": [],
    "source": [
     "severity_scores = ses.dms_smut(p53_codons, gia_null_eto, bias_dms=True, include_original=True)\n",
     "sns.heatmap(severity_scores, cmap='seismic', robust=False)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -428,6 +424,7 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "For the comparison of the domains we first cut our data into smaller corresponding chunks. We then applied different types of analyses on those domains, all of\n",
     "which can be seen in the domain_comparison folder. Those analyses included the generation of\n",
@@ -435,18 +432,15 @@
     "single base mutation (SMU) and with amino acids belonging to random codons. We then compared the\n",
     "complete dataset to the SMU dataset domain-wise. Also, the results of random mutations where compared to the SMU (see domain_comparison/exploratory/smu_to_rdm).\n",
     "We looked for similar results for the other Giacomelli data sets."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-17T17:58:16.180680Z",
-     "end_time": "2023-07-17T17:58:17.007482Z"
+     "end_time": "2023-07-17T18:08:24.730167Z",
+     "start_time": "2023-07-17T18:08:23.991971Z"
     }
    },
    "outputs": [],
@@ -463,6 +457,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:08:25.338478Z",
+     "start_time": "2023-07-17T18:08:24.730006Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print('Mean DMS scores Transactivation Domain 1')\n",
@@ -472,18 +472,17 @@
     "plt.imshow(all_dms)\n",
     "plt.axis('off')\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:58:17.006983Z",
-     "end_time": "2023-07-17T17:58:17.483077Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:08:26.322842Z",
+     "start_time": "2023-07-17T18:08:25.876128Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print('Mean DMS scores DNA Binding Domain')\n",
@@ -493,18 +492,17 @@
     "plt.imshow(all_dms)\n",
     "plt.axis('off')\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:58:17.440595Z",
-     "end_time": "2023-07-17T17:58:17.874643Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:08:28.448892Z",
+     "start_time": "2023-07-17T18:08:27.909735Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print('SMU DMS scores plotted domain-wise')\n",
@@ -513,18 +511,17 @@
     "plt.imshow(smu_dms)\n",
     "plt.axis('off')\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:58:17.874476Z",
-     "end_time": "2023-07-17T17:58:18.431820Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:08:31.747501Z",
+     "start_time": "2023-07-17T18:08:31.173627Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print('Comparing DNA binding domains')\n",
@@ -533,94 +530,83 @@
     "plt.imshow(all_vs_smu)\n",
     "plt.axis('off')\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:58:18.432223Z",
-     "end_time": "2023-07-17T17:58:18.986033Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:08:33.696607Z",
+     "start_time": "2023-07-17T18:08:33.155711Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print('All DMS scores plotted domain-wise, Giacomelli WT Nutlin')\n",
     "all_dms_wt_nut = plt.imread('../domain_comparison/data/all_dms_wt_nut.png')\n",
     "fig5, ax5 = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(all_vs_smu)\n",
+    "plt.imshow(all_dms_wt_nut)\n",
     "plt.axis('off')\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:58:18.987430Z",
-     "end_time": "2023-07-17T17:58:19.565149Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:08:35.622547Z",
+     "start_time": "2023-07-17T18:08:35.107278Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print('All DMS scores plotted domain-wise, Giacomelli NULL Nutlin')\n",
     "all_dms_null_nut = plt.imread('../domain_comparison/data/all_dms_null_nut.png')\n",
     "fig6, ax6 = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(all_vs_smu)\n",
+    "plt.imshow(all_dms_null_nut)\n",
     "plt.axis('off')\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:58:19.565071Z",
-     "end_time": "2023-07-17T17:58:20.397748Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:08:37.347193Z",
+     "start_time": "2023-07-17T18:08:36.967426Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print('DMS scores DNA Binding Domain, Giacomelli NULL Nutlin')\n",
     "histogramm_dna_null_nut = plt.imread('../domain_comparison/data/histogram_dna_null_nut.png')\n",
     "fig7, ax7 = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(all_vs_smu)\n",
+    "plt.imshow(histogramm_dna_null_nut)\n",
     "plt.axis('off')\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:58:20.159621Z",
-     "end_time": "2023-07-17T17:58:20.643448Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-17T18:08:39.116521Z",
+     "start_time": "2023-07-17T18:08:38.629330Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print('DMS scores DNA Binding Domain with all DMS scores and SMU, Nutlin datasets')\n",
     "all_vs_smu_nut = plt.imread('../domain_comparison/data/all_vs_smu_nut.png')\n",
     "fig8, ax8 = plt.subplots(figsize=(20, 20))\n",
-    "plt.imshow(all_vs_smu)\n",
+    "plt.imshow(all_vs_smu_nut)\n",
     "plt.axis('off')\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-07-17T17:58:20.643338Z",
-     "end_time": "2023-07-17T17:58:21.168651Z"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
@@ -639,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
